@@ -28,9 +28,9 @@
 				</a>
 			</td>
 			<td class="dplinks"><a href="{tongue_root}about.html#sav" class="top savi">SAVi</a></td>
-			<td class="dplinks"><a href="{tongue_root}about.html#install" class="top install">Install</a></td>
+			<td class="dplinks"><a href="{tongue_root}about.html#install" class="top install">{install_link_text}</a></td>
 			<td class="dplinks"><a href="{tongue_root}about.html#git" class="top hub">Github</a></td>
-			<td class="dplinks"><a href="{tongue_root}news/posts.html" class="top news">News</a></td>
+			<td class="dplinks"><a href="{tongue_root}news/posts.html" class="top news">{news_link_text}</a></td>
 			<td class="options">{tongue_select}</td>
 		</tr>
 	</table>
