@@ -43,8 +43,17 @@ d-portal.org还处于非常早期的开发，定于四月中旬Alpha版本。感
 #index_paragraph2_text
 在第一次迭代ICTS它包含通过国际援助透明度倡议(IATI)以及由经合组织发展援助委员会债权人报告系统公布的最新（2012年）汇总数据公布的最新数据。将未来的发展包括，除其他外，援助信息管理系统，国家预算数据及可比的社会经济指标范围。
 
-#read_more_text
-阅读全文
+#news_page_text 
+目前开发的信息（新闻） 
+
+#install_link_text 
+安装 
+
+#news_link_text 
+新闻 
+
+#read_more_text 
+了解更多关于d-portal
 
 #explore_title_text
 探索一个国家
