@@ -46,6 +46,12 @@ In its first iteration it contains current data published through the Internatio
 #news_page_text
 Information on current development (News)
 
+#install_link_text
+Install
+
+#news_link_text
+News
+
 #read_more_text
 Read more about d-portal
 
