@@ -43,8 +43,17 @@ est une plate-forme d'information sur le pays qui permet de suivre les flux de r
 #index_paragraph2_text
 Dans sa première itération, il contient des données actuelles publiées par l'Initiative internationale pour la transparence de l'aide (IATI), ainsi que les plus récentes (2012) des données agrégées publiées par le créancier CAD de l'OCDE Système de notification. Développement futur comprendra, entre autres, les données des information sur l'aide systèmes de gestion, les budgets nationaux et une série d'indicateurs socio- économiques comparables.
 
-#read_more_text
-Lire la suite
+#news_page_text 
+Informations sur le développement actuel (Nouvelles) 
+
+#install_link_text 
+Installer 
+
+#news_link_text 
+Nouvelles 
+
+#read_more_text 
+En savoir plus sur d-portal
 
 #explore_title_text
 Explorez un pays
