@@ -43,8 +43,17 @@ d-portal.org अप्रैल के मध्य अल्फा रिली
 #index_paragraph2_text
 पहली यात्रा में आईसीटी यह अंतरराष्ट्रीय सहायता पारदर्शिता पहल (IATI) और साथ ही ओईसीडी डैक ऋणदाता रिपोर्टिंग प्रणाली द्वारा प्रकाशित एकत्रित (2012) सबसे हाल के डेटा के माध्यम से प्रकाशित मौजूदा डेटा शामिल हैं. भविष्य के विकास , अन्य बातों के साथ सहायता सूचना प्रबंधन प्रणाली , राष्ट्रीय बजट से डेटा और तुलनीय सामाजिक - आर्थिक संकेतकों की एक श्रृंखला शामिल होंगे .
 
-#read_more_text
-और अधिक पढ़ें
+#news_page_text 
+वर्तमान विकास पर सूचना (समाचार) 
+
+#install_link_text 
+स्थापित करें 
+
+#news_link_text 
+समाचार 
+
+#read_more_text 
+d-portal के बारे में और अधिक पढ़ें
 
 #explore_title_text
 एक देश का पता लगाने
