@@ -46,6 +46,12 @@ d-portal.org はアルファリリース中旬4月に予定され、非常に初
 #news_page_text
 現在の開発に関する情報
 
+#install_link_text 
+インストール 
+
+#news_link_text 
+ニュース 
+
 #read_more_text
 d-portalについての詳細を読む
 
