@@ -43,8 +43,17 @@ es una plataforma de información basada en los países que registra los flujos 
 #index_paragraph2_text
 Las TIC en la primera iteración que contiene los datos actuales publicados a través de la Iniciativa Internacional de Transparencia de la Ayuda (IATI), así como los datos más recientes (2012) agregada publicados por el Sistema de Notificación de los Países Acreedores del CAD. ¿Será el desarrollo futuro incluyen, entre otros, los datos de emergencia información, Sistemas de Gestión de los presupuestos nacionales y una serie de indicadores socioeconómicos comparables.
 
-#read_more_text
-Leer más
+#news_page_text 
+La información sobre el desarrollo actual (Noticias) 
+
+#install_link_text 
+Instalar 
+
+#news_link_text 
+Noticias 
+
+#read_more_text 
+Lea más acerca de d-portal
 
 #explore_title_text
 Explora un país
