@@ -1,6 +1,8 @@
 Static site (2014-05-29 shi)
 ==============================
 Changed all links to News page to direct link (bug fix)
+Translations for navigation links on Index, About, News page
+
 
 Static site (2014-05-28 shi)
 ==============================
